--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 <table>
-  <thead>
     <tr>
       <td>
         <p><img src="1.jpg" ></p>
@@ -15,7 +14,6 @@
         <h1> Пожалов Роман <br> Сергійович </h1>
       </th>
     </tr>
-  </thead>
 </table>
 <h2>Привіт! Мене звати <em>Роман</em>.</h2>
 <h3>
@@ -34,7 +32,20 @@
   <li><a href="index2.html">Улюблені книги</a></li>
   <li><a href="index3.html">Навички</a></li>
   <li><a href="index4.html">Контактна інформація</a></li>
-</h3></ul>
+<ul></h3>
 <hr>
+  <table>
+    <tr>
+      <td>
+        <h2>Терези (знак зодіаку)</h2><br>
+        <h4>Терези́ (лат. Libra)  — сьомий знак зодіаку, відповідний сектору екліптики від 180° до 210°, рахуючи від точки весняного рівнодення. Терези є чоловічим кардинальним повітряним знаком.<br>
+            Згідно із західною астрологічною традицією вважається, що Сонце знаходиться в знаку Терезів приблизно з 23 вересня по 23 жовтня, у ведичній — Тула з 17 жовтня до 16 листопада. Не слід плутати знак Терезів з сузір'ям Терезів, в якому Сонце перебуває з 31 жовтня до 22 листопада.</h4>
+      </td>
+      <td>
+        <h2>Роман (ім'я)</h2><br>
+        <h4>Рома́н (лат. Romanus, грец. Ρωμαϊκή) — чоловіче особове ім'я. Походить з латини (Romanus, «римлянин»).</h4>
+      </td>
+    </tr>
+  </table>
   </body>
 </html>
