--- a/index3.html
+++ b/index3.html
@@ -14,10 +14,10 @@
 </thead>
 <tbody>
   <tr>
-    <td>Алгебра </td>
-    <td>&#9733 &#9733 &#9733 &#9733 &#9733</td>
-    <td>Англійська мова </td>
-    <td>&#9733 &#9733 &#9734 &#9734 &#9734</td>
+    <td width="300>Алгебра </td>
+    <td width="300>&#9733 &#9733 &#9733 &#9733 &#9733</td>
+    <td width="300>Англійська мова </td>
+    <td width="300>&#9733 &#9733 &#9734 &#9734 &#9734</td>
   </tr>
   <tr>
     <td>Українська мова </td>
