--- a/index3.html
+++ b/index3.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 <h3>
-<table>
+<table cellspacing="15"  cellpadding = "10">
 <thead>
   <tr>
     <td colspan="4"><h2>Навички</h2></td>
@@ -14,10 +14,10 @@
 </thead>
 <tbody>
   <tr>
-    <td width="300">Алгебра </td>
-    <td width="300">&#9733 &#9733 &#9733 &#9733 &#9733</td>
-    <td width="300">Англійська мова </td>
-    <td width="300">&#9733 &#9733 &#9734 &#9734 &#9734</td>
+    <td>Алгебра </td>
+    <td>&#9733 &#9733 &#9733 &#9733 &#9733</td>
+    <td>Англійська мова </td>
+    <td>&#9733 &#9733 &#9734 &#9734 &#9734</td>
   </tr>
   <tr>
     <td>Українська мова </td>
