--- a/index.html
+++ b/index.html
@@ -3,29 +3,34 @@
   <head>
     <title> Роман </title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="CSS.css" />
+
 </head>
 <body>
-<table>
-    <tr>
-      <td>
-        <p><img src="1.jpg" ></p>
-      </td>
-      <th>
-        <h1> Пожалов Роман <br> Сергійович </h1>
-      </th>
-    </tr>
-</table>
-<h2>Привіт! Мене звати <em>Роман</em>.</h2>
-<h3>
-<ul>
+<table cellspacing="20">
+ <tr>
+  <td>
+   <p><img src="1.jpg" ></p>
+  </td>
+  <td>
+   <h1> Пожалов Роман Сергійович </h1>
+ </td>
+</tr>
+<tr>
+  <td colspan="2" >
+    <h2>Привіт! Мене звати <em>Роман</em>.</h2>
+<h3><ul>
 <li>Я народився в <a href="https://uk.wikipedia.org/wiki/Біла_Церква"> Білій Церкві </a></li>
 <li>Навчався в <a href="https://school.i18.pp.ua">БЗШ№18</a> та <a href="https://statelic.kiev.ua">БНВО"Ліцей МАН"</a></li>
 <li>По теперішній час навчаюсь на бюджеті в <a href="https://nau.edu.ua">Національному авіаційному університеті</a> на другому курсі</li>
 <li>За щасливим збігом обставин проживаю в 3 гуртожитку </li>
 <li>Мій день народження 15 жовтня</li>
-</ul>
-</h3>
+</ul></h3>
 <hr>
+   </td>
+  </tr>
+  <tr>
+<td colspan="2" >
 <h2>Про мене</h2>
 <h3><ul>
   <li><a href="index1.html">Хобі</a></li>
@@ -34,9 +39,10 @@
   <li><a href="index4.html">Контактна інформація</a></li>
 <ul></h3>
 <hr>
-  <table>
+    </td>
+    </tr>
     <tr>
-      <td>
+      <td width="50%">
         <h2>Терези (знак зодіаку)</h2><br>
         <h4>Терези́ (лат. Libra)  — сьомий знак зодіаку, відповідний сектору екліптики від 180° до 210°, рахуючи від точки весняного рівнодення. Терези є чоловічим кардинальним повітряним знаком.<br>
             Згідно із західною астрологічною традицією вважається, що Сонце знаходиться в знаку Терезів приблизно з 23 вересня по 23 жовтня, у ведичній — Тула з 17 жовтня до 16 листопада. Не слід плутати знак Терезів з сузір'ям Терезів, в якому Сонце перебуває з 31 жовтня до 22 листопада.</h4>
